--- a/my.css
+++ b/my.css
@@ -1,4 +1,34 @@
 #map_area {
-    border-style: solid;
-    border-width: 2px;
+  border-style: solid;
+  border-width: 1px;
+}
+
+#crud_wrapper {
+  width: 100%;
+  overflow: hidden; /* add this to contain floated children */
+}
+
+#transaction_area {
+  width: 19%;
+  float: left;
+}
+
+#steps_area {
+  width: 19%;
+  float: left;
+}
+
+#actions_area {
+  width: 19%;
+  float: left;
+}
+
+#journey_area {
+  width: 19%;
+  float: left;
+}
+
+#actions_selected_area {
+  width: 19%;
+  float: left;
 }
