--- a/css/my.css
+++ b/css/my.css
@@ -1,7 +1,3 @@
-#map_area {
-  border-style: solid;
-  border-width: 1px;
-}
 
 #crud_wrapper {
   width: 100%;
@@ -31,4 +27,31 @@
 #actions_to_show_area {
   width: 20%;
   float: left;
+}
+
+#table_area {
+  width: 0%;
+  float: left;
+  visibility: hidden;
+  border-width: thin;
+  overflow-y: auto;
+}
+
+#map_area {
+}
+
+#footer {
+  margin-left: 0px;
+}
+
+#symbol_table {
+  margin: 0 auto;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th,td {
+    padding: 5px;
 }
